# ecommerce-rust

./: .env  Cargo.toml  Readme.md  Rocket.toml
migrations/2020-12-02-111842_create_product_table/: down.sql  up.sql
migrations/2020-12-02-140334_create_order_table/: down.sql  up.sql
migrations/2020-12-02-181216_create_list_item_table/: up.sql
src/: auth.rs  lib.rs  main.rs  schema.rs
src/db/: mod.rs  orders.rs  product.rs
src/model/: mod.rs  orders.rs  product.rs
src/service/: mod.rs  orders.rs  product.rs
